# agentic-alpha

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configs/: workflow_csi1000_baseline_alpha158.yaml  workflow_csi1000_baseline_alpha158_oos_2025_2026.yaml  workflow_csi1000_baseline_lightgbm.yaml  workflow_csi1000_baseline_lite.yaml  workflow_csi1000_baseline_xgboost.yaml  workflow_csi1000_custom_lightgbm.yaml  workflow_csi1000_custom_v2_lightgbm.yaml  workflow_csi1000_custom_v2_xgboost.yaml  workflow_csi1000_custom_xgboost.yaml  workflow_csi1000_hea_lightgbm.yaml  workflow_csi1000_hea_lightgbm_oos_2025_2026.yaml  workflow_csi1000_topn20_lite.yaml  workflow_csi1000_topn30_lite.yaml  workflow_csi1000_topn50_lite.yaml  workflow_csiall_baseline_lightgbm.yaml  workflow_csiall_baseline_lite.yaml  workflow_csiall_topn20_lightgbm.yaml  workflow_csiall_topn20_lite.yaml  workflow_csiall_topn30_lightgbm.yaml  workflow_csiall_topn30_lite.yaml  workflow_csiall_topn50_lightgbm.yaml  workflow_csiall_topn50_lite.yaml  workflow_custom_factor_lightgbm_quick.yaml  workflow_custom_factor_xgboost_quick.yaml  workflow_official_lightgbm_quick.yaml  workflow_official_xgboost_quick.yaml
docs/: DAILY_SIGNAL_GUIDE.md  METRIC_STANDARD_V1.md  TERMS_AND_METRICS.md  analysis_quantaalpha.md
scripts/: _tmp_import_csi1000.py  analyze_benchmark.py  analyze_csi1000.py  analyze_csi1000_factors.py  analyze_model.py  analyze_topn50_detail.py  analyze_unified_ranking.py  check_data.py  compare_rebalance_freq.py  daily_signal.py  download_financial_data.py  (+20 more)
(+77 files in other folders)
